Twist order workflow for Voigt sigma factors.

--- a/paulssonlab/src/paulssonlab/shenker/cloning/201004 3G.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/201004 3G.ipynb
@@ -146,22 +146,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_plib_seq(drive_service, plib_num):\n",
-    "    seq_file = api.google.get_drive_by_path(\n",
-    "        drive_service, f\"pLIB{plib_num}.gbk\", root=col[\"plasmid_maps\"]\n",
-    "    )\n",
-    "    seq = api.read_sequence(\n",
-    "        drive_service.files().get_media(fileId=seq_file).execute().decode(\"utf8\")\n",
-    "    )\n",
-    "    return seq"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "seq1 = get_plib_seq(drive_service, 1)\n",
     "seq2 = get_plib_seq(drive_service, 82)\n",
     "seq3 = get_plib_seq(drive_service, 23)\n",
@@ -205,33 +189,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "command = \"@gibson(@goldengate(UNS1, J23101, BCD11, mVenus, L3S3P11, UNS5), @goldengate(UNS5, J23150, CFP, BCD16, L3S2P55, UNS10))\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "command = \"@3G(UNS1, J23101, BCD11, mVenus, L3S3P11, UNS5; UNS5, J23150, CFP, BCD16, L3S2P55, UNS10)\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "command = \"@3G(UNS1-J23101-BCD11-mVenus-L3S3P11-UNS5, UNS5+J23150+CFP+BCD16+L3S2P55+UNS10)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -253,199 +210,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "grammar = \"\"\"@@grammar::CALC\n",
+    "grammar_preamble = \"\"\"@@grammar::CLONING\n",
+    "@@whitespace :: //\"\"\"\n",
     "\n",
-    "\n",
-    "start\n",
+    "reference_grammar = \"\"\"reference\n",
     "    =\n",
-    "    expression $\n",
+    "    | pcr\n",
+    "    | restriction_digest\n",
+    "#    | assembly\n",
+    "    | name\n",
     "    ;\n",
     "\n",
+    "name = name:/\\w+/ ;\n",
     "\n",
-    "expression\n",
-    "    =\n",
-    "    | left:expression op:'+' ~ right:term\n",
-    "    | left:expression op:'-' ~ right:term\n",
-    "    | term\n",
-    "    ;\n",
+    "pcr = template:reference '~' ~ primer1:name ',' primer2:name ;\n",
     "\n",
+    "restriction_digest = input:reference '/' ~ enzyme:name ;\n",
     "\n",
-    "term\n",
-    "    =\n",
-    "    | left:term op:'*' ~ right:factor\n",
-    "    | left:term '/' ~ right:factor\n",
-    "    | factor\n",
-    "    ;\n",
+    "#assembly = assembly+:name {'-' ~ assembly+:name}+ ;\n",
+    "\"\"\"\n",
     "\n",
-    "\n",
-    "factor\n",
-    "    =\n",
-    "    | '(' ~ @:expression ')'\n",
-    "    | number\n",
-    "    ;\n",
-    "\n",
-    "\n",
-    "number\n",
-    "    =\n",
-    "    /\\d+/\n",
-    "    ;\n",
-    "\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "grammar2 = \"\"\"@@grammar::CALC\n",
-    "\n",
-    "\n",
-    "start\n",
-    "    =\n",
-    "    expression $\n",
-    "    ;\n",
-    "\n",
-    "\n",
-    "expression\n",
-    "    =\n",
-    "    | addition\n",
-    "    | subtraction\n",
-    "    | term\n",
-    "    ;\n",
-    "\n",
-    "\n",
-    "addition\n",
-    "    =\n",
-    "    left:expression op:'+' ~ right:term\n",
-    "    ;\n",
-    "\n",
-    "subtraction\n",
-    "    =\n",
-    "    left:expression op:'-' ~ right:term\n",
-    "    ;\n",
-    "\n",
-    "\n",
-    "term\n",
-    "    =\n",
-    "    | multiplication\n",
-    "    | division\n",
-    "    | factor\n",
-    "    ;\n",
-    "\n",
-    "\n",
-    "multiplication\n",
-    "    =\n",
-    "    left:term op:'*' ~ right:factor\n",
-    "    ;\n",
-    "\n",
-    "\n",
-    "division\n",
-    "    =\n",
-    "    left:term op:'/' ~ right:factor\n",
-    "    ;\n",
-    "\n",
-    "\n",
-    "factor\n",
-    "    =\n",
-    "    | '(' ~ @:expression ')'\n",
-    "    | number\n",
-    "    ;\n",
-    "\n",
-    "\n",
-    "number\n",
-    "    =\n",
-    "    /\\d+/\n",
-    "    ;\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "parser = tatsu.compile(grammar2)\n",
-    "# ast = parser.parse('3 + 5 * ( 10 - 20 )')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class CalcSemantics(object):\n",
-    "    def number(self, ast):\n",
-    "        return int(ast)\n",
-    "\n",
-    "    def addition(self, ast):\n",
-    "        return ast.left + ast.right\n",
-    "\n",
-    "    def subtraction(self, ast):\n",
-    "        return ast.left - ast.right\n",
-    "\n",
-    "    def multiplication(self, ast):\n",
-    "        return ast.left * ast.right\n",
-    "\n",
-    "    def division(self, ast):\n",
-    "        return ast.left / ast.right"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ast = parser.parse(\"3 + 5 * ( 10 - 20 )\", semantics=CalcSemantics())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ast"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Commands"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# \"quoted DNA\"\n",
-    "# oLIB1+oLIB2\n",
-    "# /"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "grammar = \"\"\"@@grammar::CLONING\n",
-    "@@whitespace :: //\n",
-    "\n",
-    "start = command $ ;\n",
-    "\n",
-    "ws = /\\s*/ ;\n",
-    "\n",
-    "command_name = '@' ~ @:/\\w+/ ;\n",
-    "\n",
-    "command_arglist = '(' ~ ws @+:argument ws {',' ws @+:argument ws }* ')' ;\n",
-    "\n",
-    "command = command_name:command_name arguments:command_arglist ;\n",
+    "grammar = f\"\"\"start = command $ ;\n",
     "\n",
     "argument\n",
     "    =\n",
@@ -453,20 +238,27 @@
     "    | command\n",
     "    | float\n",
     "    | int\n",
-    "    | assembly\n",
-    "    | name\n",
+    "    | lookup\n",
+    "    | reference\n",
     "    ;\n",
+    "\n",
+    "ws = /\\s*/ ;\n",
+    "\n",
+    "command_name = '@' ~ @:/\\w+/ ;\n",
+    "\n",
+    "command_arglist = '(' ~ ws @+:argument ws {{',' ws @+:argument ws }}* ')' ;\n",
+    "\n",
+    "command = command_name:command_name arguments:command_arglist ;\n",
+    "\n",
+    "quoted_string = '\"' ~ quoted_string:/[^\"]*/ '\"' ;\n",
     "\n",
     "float = float:/\\d+\\.\\d+/ ;\n",
     "\n",
     "int = int:/\\d+/ ;\n",
     "\n",
-    "name = name:/\\w+/ ;\n",
+    "lookup = '$' ~ name ;\n",
     "\n",
-    "assembly = assembly+:name {'-' ~ assembly+:name}+ ;\n",
-    "\n",
-    "quoted_string = '\"' ~ quoted_string:/[^\"]*/ '\"' ;\n",
-    "\n",
+    "{reference_grammar}\n",
     "\"\"\""
    ]
   },
@@ -477,51 +269,7 @@
    "outputs": [],
    "source": [
     "parser = tatsu.compile(grammar)\n",
-    "ast = parser.parse(\n",
-    "    '@foo(blah, blah2, blah3-blah4, @bar(x1, x2, 3, \"a\", \" AAtg \", 5, 8.7))'\n",
-    ")\n",
-    "ast"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def goldengate(*args):\n",
-    "    return args\n",
-    "\n",
-    "\n",
-    "def gibson(*args):\n",
-    "    return args\n",
-    "\n",
-    "\n",
-    "def threeg(*args):\n",
-    "    return args\n",
-    "\n",
-    "\n",
-    "commands = {\"GG\": goldengate, \"Gib\": gibson, \"3G\": threeg}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "command = (\n",
-    "    \"@3G(UNS1-J23101-BCD11-mVenus-L3S3P11-UNS5, UNS5-J23150-CFP-BCD16-L3S2P55-UNS10)\"\n",
-    ")\n",
-    "# command = \"@Gib(@GG(UNS1, J23101, BCD11, mVenus, L3S3P11, UNS5), @GG(UNS5, J23150, CFP, BCD16, L3S2P55, UNS10))\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "command = \"@Gib(@GG(UNS1, J23101, BCD11, UNS5), pLIB47~oLIB22,oLIB24/BsaI)\"\n",
     "ast = parser.parse(command)\n",
     "ast"
    ]
@@ -532,15 +280,103 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# command = (\n",
+    "#     \"@3G(UNS1-J23101-BCD11-mVenus-L3S3P11-UNS5, UNS5-J23150-CFP-BCD16-L3S2P55-UNS10)\"\n",
+    "# )\n",
+    "# command = \"@Gib(@GG(UNS1, J23101, BCD11, UNS5), pLIB47~oLIB22,oLIB24/BsaI)\"\n",
+    "# command = \"@Gib(@GG(UNS1, J23101, BCD11, UNS5), @PCR(pLIB47, oLIB22, oLIB24)/BsaI)\"\n",
+    "# command = (\n",
+    "#     \"@Gib(@GG(UNS1, J23101, BCD11, UNS5), @RE(@PCR(pLIB47, oLIB22, oLIB24), BsaI))\"\n",
+    "# )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "part_sheet.sync?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%timeit\n",
+    "df = part_sheet.get_as_df().set_index(\"Name*\")\n",
+    "df.loc[\"YFP_CD\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%timeit\n",
+    "names = part_sheet.get_col(1)[1:]\n",
+    "idx = names.index(\"YFP_CD\")\n",
+    "part_sheet.get_row(idx + 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def a():\n",
+    "    hhh"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_named_sequence(name, part_sheet, plasmid_maps):\n",
+    "    # try plasmid, strain, part\n",
+    "    pass\n",
+    "\n",
+    "\n",
+    "def goldengate(*args):\n",
+    "    return \"gg\", args\n",
+    "\n",
+    "\n",
+    "def threeg(*args):\n",
+    "    return \"3g\", args\n",
+    "\n",
+    "\n",
+    "commands = {\"GG\": goldengate, \"3G\": threeg}\n",
+    "\n",
+    "get_named_sequence(\"pLIB27\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reference_parser = tatsu.compile(grammar_preamble + reference_grammar)\n",
+    "\n",
+    "\n",
     "class CloningCommandSemantics(object):\n",
+    "    def __init__(self, commands):\n",
+    "        self.commands = commands\n",
+    "\n",
     "    def command(self, ast):\n",
-    "        if ast.command_name not in commands:\n",
+    "        if ast.command_name not in self.commands:\n",
     "            raise tatsu.semantics.SemanticError(\n",
     "                \"command must be one of: {}\".format(\n",
     "                    \", \".join([f\"@{k}\" for k in commands.keys()])\n",
     "                )\n",
     "            )\n",
-    "        command = commands[ast.command_name]\n",
+    "        command = self.commands[ast.command_name]\n",
     "        return command(ast.arguments)\n",
     "\n",
     "    def int_(self, ast):\n",
@@ -555,11 +391,8 @@
     "    def assembly(self, ast):\n",
     "        return ast.assembly\n",
     "\n",
-    "    def default_(self, ast):\n",
-    "        print(\"foo\")\n",
     "\n",
-    "\n",
-    "parser.parse(command, semantics=CloningCommandSemantics())"
+    "# parser.parse(command, semantics=CloningCommandSemantics())"
    ]
   },
   {
@@ -567,7 +400,21 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# GG\n",
+    "command = \"@GG(J23101, BCD11, mVenus, L3S3P11, p121/BsaI)\"\n",
+    "# 3G\n",
+    "# command = \"@3G(@GG(UNS1, J23101, BCD11, mVenus, L3S3P11, UNS5), @GG(UNS5, J23150, CFP, BCD16, L3S2P55, UNS10), JUMP_p15a_UNS1_UNS10)\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "parser.parse(command, semantics=CloningCommandSemantics(commands))"
+   ]
   }
  ],
  "metadata": {
