--- a/paulssonlab/src/paulssonlab/shenker/cloning/201012 Voigt sigma factors.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/201012 Voigt sigma factors.ipynb
@@ -17,9 +17,12 @@
     "from datetime import datetime\n",
     "import string\n",
     "import pygsheets\n",
+    "import requests\n",
     "from tqdm.auto import tqdm\n",
     "import Bio.Restriction as Restriction\n",
-    "from Bio.Seq import Seq"
+    "from Bio.Seq import Seq\n",
+    "from Bio.SeqRecord import SeqRecord\n",
+    "import benchlingapi"
    ]
   },
   {
@@ -43,7 +46,9 @@
     "import paulssonlab.cloning.workflow as workflow\n",
     "import paulssonlab.cloning.util as cloning_util\n",
     "import paulssonlab.cloning.sequence as sequence\n",
-    "import paulssonlab.cloning.golden_gate as golden_gate"
+    "import paulssonlab.cloning.golden_gate as golden_gate\n",
+    "import paulssonlab.cloning.codon as codon\n",
+    "import paulssonlab.cloning.optimization as optimization"
    ]
   },
   {
@@ -53,6 +58,24 @@
    "outputs": [],
    "source": [
     "hv.extension(\"bokeh\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Download data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!mkdir -p data/2013sigmafactorswitches_supp\n",
+    "!curl -b does_not_exist -Lo data/2013sigmafactorswitches_supp/supptable1.xlsx \"https://www.embopress.org/action/downloadSupplement?doi=10.1038%2Fmsb.2013.58&file=msb201358-sup-0002.xlsx\"\n",
+    "!curl -b does_not_exist -Lo data/2013sigmafactorswitches_supp/supptable2.xlsx \"https://www.embopress.org/action/downloadSupplement?doi=10.1038%2Fmsb.2013.58&file=msb201358-sup-0003.xlsx\""
    ]
   },
   {
@@ -107,7 +130,8 @@
    "source": [
     "strain_sheet = gc.open_by_key(col[\"strains\"]).worksheet()\n",
     "plasmid_sheet = gc.open_by_key(col[\"plasmids\"]).worksheet()\n",
-    "part_sheet = gc.open_by_key(col[\"parts\"]).worksheet()"
+    "part_sheet = gc.open_by_key(col[\"parts\"]).worksheet()\n",
+    "part_type_sheet = gc.open_by_key(col[\"parts\"]).worksheet_by_title(\"Part types\")"
    ]
   },
   {
@@ -120,115 +144,6 @@
     "plasmid_folder = col[\"plasmid_maps\"]\n",
     "plasmid_maps = api.google.list_drive(drive_service, root=plasmid_folder)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Restriction.BsmBI.compsite"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Part cutting"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from Bio import Restriction"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "seq1 = get_plib_seq(drive_service, 1)\n",
-    "seq2 = get_plib_seq(drive_service, 82)\n",
-    "seq3 = get_plib_seq(drive_service, 23)\n",
-    "seq4 = get_plib_seq(drive_service, 95)\n",
-    "seq5 = get_plib_seq(drive_service, 110)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from Bio.Seq import Seq"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "to_join = [\n",
-    "    (sequence.reverse_complement(seq1), Restriction.BsaI, \"Name1\", \"promoter\"),\n",
-    "    (sequence.reverse_complement(seq2), Restriction.BsaI, \"Name2\", \"RBS\"),\n",
-    "    (seq3, Restriction.BsaI, \"Name3\", \"CDS\"),\n",
-    "    (seq4, Restriction.BsaI, \"Name4\", \"terminator\"),\n",
-    "    (sequence.reverse_complement(seq5), Restriction.BsaI, \"Name5\", \"misc_feature\"),\n",
-    "]\n",
-    "\n",
-    "assembly = golden_gate.assemble(to_join, linear=False)\n",
-    "assembly"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open(\"/Users/jacob/Downloads/test3.gb\", \"w\") as f:\n",
-    "    f.write(assembly.format(\"gb\"))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# PCR-based GG primer design"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# upstream overhang\n",
-    "# upstream linker\n",
-    "# template homology\n",
-    "# downstream linker\n",
-    "# downstream homology"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# PCR-based GG assembly"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -420,45 +335,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "selected_sigmas = [\n",
-    "    \"ECF03_1198\",\n",
-    "    \"ECF16_3622\",\n",
-    "    \"ECF20_992\",\n",
-    "    \"ECF38_1322\",\n",
-    "    \"ECF27_4265\",\n",
-    "    \"ECF22_4450\",\n",
-    "    \"ECF11_987\",\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sigma4 = sigma_orthogonality_mean.loc[:, selected_sigmas]\n",
-    "sigma4 = sigma4.loc[sigma4.idxmax(axis=0), :]\n",
-    "sns.heatmap(sigma4, annot=True, fmt=\".0f\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "antisigma4 = antisigma_orthogonality_mean.loc[:, selected_sigmas]\n",
-    "antisigma4 = antisigma4.loc[antisigma4.idxmax(axis=0), :]\n",
-    "sns.heatmap(antisigma4, annot=True, fmt=\".0f\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "plt.figure(figsize=(15, 15))\n",
     "sns.heatmap(antisigma_orthogonality_mean, annot=True, fmt=\".0f\")"
    ]
@@ -498,7 +374,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Tradeoffs"
+    "## Selected sigma factors"
    ]
   },
   {
@@ -516,7 +392,85 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sigmas_to_antisigmas  # .name"
+    "sigmas_to_antisigmas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "selected_sigmas = [\n",
+    "    \"ECF03_1198\",\n",
+    "    \"ECF16_3622\",\n",
+    "    \"ECF20_992\",\n",
+    "    \"ECF38_1322\",\n",
+    "    \"ECF27_4265\",\n",
+    "    \"ECF22_4450\",\n",
+    "    \"ECF11_987\",\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sigma_subset = sigma_orthogonality_mean.loc[:, selected_sigmas]\n",
+    "sigma_subset = sigma_subset.loc[sigma_subset.idxmax(axis=0), :]\n",
+    "sns.heatmap(sigma_subset, annot=True, fmt=\".0f\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "antisigma_subset = antisigma_orthogonality_mean.loc[:, selected_sigmas]\n",
+    "antisigma_subset = antisigma_subset.loc[antisigma_subset.idxmax(axis=0), :]\n",
+    "sns.heatmap(antisigma_subset, annot=True, fmt=\".0f\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "titration_subset = sigma_titration.loc[selected_sigmas, [\"Average promoter activity\"]].T\n",
+    "titration_subset.index = titration_subset.index.droplevel()\n",
+    "titration_subset.plot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "promoter_subset = sigma_titration.loc[\n",
+    "    selected_sigmas, (\"Unnamed: 1_level_0\", \"Promoter\")\n",
+    "]\n",
+    "promoter_subset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert set(promoter_subset.values) == set(sigma_subset.index.values)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Tradeoffs"
    ]
   },
   {
@@ -539,9 +493,19 @@
     "sigma_activationrepression = pd.concat(\n",
     "    (sigma_max, antisigma_max, sigma_growth100, antisigma_growth50), axis=1\n",
     ")\n",
+    "sigma_activationrepression[\"Min growth\"] = sigma_activationrepression[\n",
+    "    [\"Sigma growth\", \"Antisigma growth\"]\n",
+    "].min(axis=1)\n",
     "sigma_activationrepression[\"Selected\"] = sigma_activationrepression.index.isin(\n",
     "    selected_sigmas\n",
-    ")"
+    ")\n",
+    "sigma_activationrepression[\"Promoter\"] = sigma_titration[\n",
+    "    (\"Unnamed: 1_level_0\", \"Promoter\")\n",
+    "]\n",
+    "sigma_subset_info = sigma_activationrepression[\n",
+    "    sigma_activationrepression[\"Selected\"] == True\n",
+    "]\n",
+    "sigma_subset_info = sigma_subset_info.reset_index().rename({\"index\": \"Sigma\"}, axis=1)"
    ]
   },
   {
@@ -586,6 +550,21 @@
    "outputs": [],
    "source": [
     "sigma_activationrepression.hvplot.scatter(\n",
+    "    \"Sigma growth\",\n",
+    "    \"Antisigma growth\",\n",
+    "    color=\"Selected\",\n",
+    "    cmap=\"Category10\",\n",
+    "    hover_cols=hover_cols,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sigma_activationrepression.hvplot.scatter(\n",
     "    \"Sigma max\", \"Antisigma max\", color=\"Sigma growth\", hover_cols=hover_cols\n",
     ")"
    ]
@@ -596,7 +575,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"P03\\r\".encode(\"ascii\")"
+    "sigma_activationrepression.hvplot.scatter(\n",
+    "    \"Sigma max\", \"Antisigma max\", color=\"Antisigma growth\", hover_cols=hover_cols\n",
+    ")"
    ]
   },
   {
@@ -606,7 +587,7 @@
    "outputs": [],
    "source": [
     "sigma_activationrepression.hvplot.scatter(\n",
-    "    \"Sigma max\", \"Antisigma max\", color=\"Antisigma growth\", hover_cols=hover_cols\n",
+    "    \"Sigma max\", \"Antisigma max\", color=\"Min growth\", hover_cols=hover_cols\n",
     ")"
    ]
   },
@@ -634,7 +615,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Twist API"
+    "## Checking antisigma correspondence"
    ]
   },
   {
@@ -643,7 +624,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import requests"
+    "promoter_subset"
    ]
   },
   {
@@ -652,8 +633,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "r = requests.get(\"https://twist-api.twistdna.com/healthcheck\")\n",
-    "print(r, r.content)"
+    "antisigma_orthogonality_mean.loc[\"AS22_1147\"]"
    ]
   },
   {
@@ -662,78 +642,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "r = requests.get(\"https://twist-api.twistbioscience-staging.com/healthcheck\")\n",
-    "print(r, r.content)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "r = requests.post(\n",
-    "    \"https://twist-api.twistbioscience-staging.com/api-token-verify\",\n",
-    "    headers={\n",
-    "        \"Token\": \"eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJpZCI6ImM0ZjRmNWI2LTUwOWQtNDI5NC05NDY0LTg4ZWJiYzg4YjZkOSIsInVzZXJfaWQiOiI0MDM1NmI3Ny01N2ZkLTRhZmQtYWU0OC1iODE2ZjJlMzJiOGUiLCJ1c2VybmFtZSI6ImhhcnZhcmRfYXBpIiwiZXhwIjoxNjY3MTQyNjQ4fQ.oAvKsw7VdIUTr9myYHxfhokge5bAgPmJDrgQVHrNwDk\"\n",
-    "    },\n",
-    ")\n",
-    "print(r, r.content)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "username, password = \"harvard_api\", \"f42PZ8mgZwHTHqss\"\n",
-    "token = \"eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJpZCI6ImM0ZjRmNWI2LTUwOWQtNDI5NC05NDY0LTg4ZWJiYzg4YjZkOSIsInVzZXJfaWQiOiI0MDM1NmI3Ny01N2ZkLTRhZmQtYWU0OC1iODE2ZjJlMzJiOGUiLCJ1c2VybmFtZSI6ImhhcnZhcmRfYXBpIiwiZXhwIjoxNjY3MTQyNjQ4fQ.oAvKsw7VdIUTr9myYHxfhokge5bAgPmJDrgQVHrNwDk\"\n",
-    "r = requests.post(\n",
-    "    \"https://twist-api.twistbioscience-staging.com/api-token-auth\",\n",
-    "    headers={\"Token\": token, \"username\": username, \"password\": password},\n",
-    "    auth=(username, password),\n",
-    ")\n",
-    "print(r, r.content)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "r = requests.get(\n",
-    "    \"https://twist-api.twistbioscience-staging.com/login\",\n",
-    "    auth=(\"harvard_api\", \"f42PZ8mgZwHTHqss\"),\n",
-    ")\n",
-    "print(r, r.content)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import requests, json\n",
-    "tapi_session = requests.Session()\n",
-    "tapi_session.headers.update({\"Authorization\": \"JWT %s\" % apitoken, \"X-End-User-Token\": eutoken})\n",
-    "resp = tapi_session.get('/v1/accounts/')\n",
-    "assert resp.status_code == 200\n",
-    "deserialized = json.loads(resp.content)\n",
-    "deserialized_first_result = deserialized[0]\n",
-    "resp = tapi_session.get('/v1/accounts/%s/users/' % deserialized_first_result['id'], headers={\"Authorization\", \"JWT %s\" % token, 'X-End-User-Token': eut})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "resp = requests.get('/v1/prices/', headers={\"Authorization\", \"JWT %s\" % token, 'X-End-User-Token': eut})\n",
-    "resp = requests.get('/v1/accounts/001Q00000197g2CIAQ/prices/', headers={\"Authorization\", \"JWT %s\" % token, 'X-End-User-Token': eut})"
+    "antisigma_orthogonality_mean.loc[:, \"ECF22_4450\"]"
    ]
   }
  ],
@@ -753,7 +662,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
