As used to make Twist/Genewiz orders of Voigt sigmas. Factored out workflow.upload_plasmid_maps, tweaked a few things, added first cut of Twist API code although it was not used to order sequences because of a bug on Twist's end.

--- a/paulssonlab/src/paulssonlab/shenker/cloning/201013 Voigt sigma factor orders.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/201013 Voigt sigma factor orders.ipynb
@@ -298,6 +298,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sigma_thresh = 50\n",
+    "sigma_subset = sigma_orthogonality_mean.loc[\n",
+    "    (sigma_orthogonality_mean > sigma_thresh).any(axis=1)\n",
+    "]\n",
+    "sigma_subset = sigma_subset.loc[:, (sigma_subset > sigma_thresh).any(axis=0)]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -412,8 +425,7 @@
     "date = datetime.now().strftime(\"%Y-%m-%d %H:%M:%S\")\n",
     "species = \"E. coli\"\n",
     "reference = \"Rhodius, V. A., Segall‐Shapiro, T. H., Sharon, B. D., Ghodasara, A., Orlova, E., Tabakh, H., ... & Voigt, C. A. (2013). Design of orthogonal genetic switches based on a crosstalk map of σs, anti‐σs, and promoters. Molecular systems biology, 9(1), 702.\"\n",
-    "construction_notes = \"BsmBI golden gate of oLIBxx+oLIBxx into storage vector pLIB112.\"\n",
-    "confirmation_notes = \"Sanger sequencing with oLIB203/oLIB204.\"\n",
+    "confirmation_notes = \"Sanger sequencing with oLIB203+oLIB204.\"\n",
     "\n",
     "oligo_description = \"Annealed oligos for Voigt sigma factor promoters.\""
    ]
@@ -518,40 +530,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Substitute sequences with Twist-optimized sequences"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Only needed if using Twist web interface to manually optimize sequences. Otherwise use DnaChisel and/or Twist API."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # TODO: we're cheating and manually running Twist codon optimization through the web interface\n",
-    "# twist_seqs = pd.read_csv(\"201006voigtsigmas.csv\").set_index(\"Name\")\n",
-    "# for kind, seqs in to_order.items():\n",
-    "#     for name, seq in seqs.items():\n",
-    "#         try:\n",
-    "#             if seqs[name].upper() != twist_seqs.loc[name,\"Insert sequence\"].upper():\n",
-    "#                 print(f\"substituting codon-optimized Twist sequence for {name}\")\n",
-    "#             else:\n",
-    "#                 print(f\"adding Twist adapters for {name}\")\n",
-    "#             seqs[name] = twist_seqs.loc[name,\"Construct sequence (Insert + Adapters)\"]\n",
-    "#         except:\n",
-    "#             print(f\"could not find Twist sequence for {name}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Use DnaChisel to optimize sequences ourselves"
    ]
   },
@@ -579,6 +557,62 @@
     "        item[\"final_seq\"] = workflow.add_flanks(new_seq, [twist_adaptors])\n",
     "    else:\n",
     "        item[\"final_seq\"] = item[\"optimized_seq\"] = item[\"initial_seq\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Substitute sequences with Twist-optimized sequences"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Only needed if using Twist web interface to manually optimize sequences. Otherwise use DnaChisel and/or Twist API."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def _format_seq(seq):\n",
+    "    return str(sequence.get_seq(seq)).lower()\n",
+    "\n",
+    "\n",
+    "for item in sequences_to_order.values():\n",
+    "    if item[\"kind\"] != \"promoter\":\n",
+    "        print(f\"{item['name']}\\t{_format_seq(item['optimized_seq'])}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: we're cheating and manually running Twist codon optimization through the web interface\n",
+    "twist_seqs = pd.read_csv(\"201013voigtsigmas.csv\").set_index(\"Name\")\n",
+    "for item in sequences_to_order.values():\n",
+    "    name = item[\"name\"]\n",
+    "    if item[\"kind\"] != \"promoter\":\n",
+    "        try:\n",
+    "            if (\n",
+    "                _format_seq(item[\"optimized_seq\"]).lower()\n",
+    "                != twist_seqs.loc[name, \"Insert sequence\"].lower()\n",
+    "            ):\n",
+    "                print(f\"substituting codon-optimized Twist sequence for {name}\")\n",
+    "            else:\n",
+    "                print(f\"adding Twist adapters for {name}\")\n",
+    "            # TODO: copy features\n",
+    "            item[\"optimized_seq\"] = SeqRecord(\n",
+    "                Seq(twist_seqs.loc[name, \"Insert sequence\"])\n",
+    "            )\n",
+    "        except:\n",
+    "            print(f\"could not find Twist sequence for {name}\")"
    ]
   },
   {
@@ -705,8 +739,8 @@
     "\n",
     "base_strain = {\n",
     "    \"Species*\": species,\n",
-    "    \"Background\": background_strain,\n",
-    "    \"Parent\": background_strain,\n",
+    "    \"Background*\": background_strain,\n",
+    "    \"Parent*\": background_strain,\n",
     "    \"Marker*\": plasmids_df.loc[storage_vector_id, \"Marker*\"],\n",
     "}"
    ]
@@ -727,15 +761,9 @@
     "oligos = []\n",
     "plasmids = []\n",
     "plasmid_maps = {}\n",
-    "strains = []"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "strains = []\n",
+    "\n",
+    "\n",
     "def _format_seq(seq):\n",
     "    return str(sequence.get_seq(seq)).lower()\n",
     "\n",
@@ -792,9 +820,11 @@
     "        \"mimetype\": \"chemical/seq-na-genbank\",\n",
     "    }\n",
     "    # plasmid\n",
-    "    # TODO: in the future this command will automatically trigger the plasmid map generation\n",
     "    command = f\"@GG({oligo_prefix}{oligo_num}={oligo_prefix}{oligo_num+1}/{storage_enzyme.__name__}, {storage_vector_id}/{storage_enzyme.__name__})\"\n",
-    "    construction_notes = f\"{storage_enzyme.__name__} golden gate of annealed oligos {oligo_prefix}{oligo_num} and {oligo_prefix}{oligo_num+1}.\"\n",
+    "    if kind == \"promoter\":\n",
+    "        construction_notes = f\"{storage_enzyme.__name__} golden gate of annealed oligos {oligo_prefix}{oligo_num}={oligo_prefix}{oligo_num+1} into storage vector {storage_vector_id}.\"\n",
+    "    else:\n",
+    "        construction_notes = f\"{storage_enzyme.__name__} golden gate of {oligo_prefix}{oligo_num} into storage vector {storage_vector_id}.\"\n",
     "    plasmid = {\n",
     "        \"Command\": command,\n",
     "        \"ID*\": plasmid_id,\n",
@@ -802,11 +832,15 @@
     "        \"Description\": description,\n",
     "        \"Size (bp)\": len(plasmid_map),\n",
     "        \"Construction Notes\": construction_notes,\n",
+    "        \"Confirmation Notes\": confirmation_notes,\n",
     "        **base_plasmid,\n",
     "    }\n",
     "    plasmids.append(plasmid)\n",
     "    plasmid_num += 1\n",
     "    # oligo\n",
+    "    item[\n",
+    "        \"oligo_id\"\n",
+    "    ] = f\"{oligo_prefix}{oligo_num}\"  # for promoters, this only records the first (top) annealed oligo\n",
     "    if kind == \"promoter\":\n",
     "        for strand, oligo_seq in [(\"top\", seq), (\"bottom\", seq.reverse_complement())]:\n",
     "            oligo = {\n",
@@ -845,9 +879,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for oligo in oligos:\n",
+    "from itertools import product, repeat\n",
+    "\n",
+    "for well, oligo in zip(cloning_util.well_iterator(), oligos):\n",
     "    if oligo[\"Vendor*\"] == \"Genewiz\":\n",
-    "        print(f\"{oligo['ID*']}\\t{oligo['Sequence*']}\")"
+    "        print(f\"{oligo['ID*'].replace('.', '_')}\\t{oligo['Sequence*']}\")\n",
+    "        # print(f\"{well}\\t{oligo['ID*']}\\t{oligo['Sequence*']}\")"
    ]
   },
   {
@@ -863,9 +900,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for oligo in oligos:\n",
-    "    if oligo[\"Vendor*\"] == \"Twist\":\n",
-    "        print(f\"{oligo['ID*']}\\t{oligo['Sequence*']}\")"
+    "# for oligo in oligos:\n",
+    "#     if oligo[\"Vendor*\"] == \"Twist\":\n",
+    "#         print(f\"{oligo['ID*']}\\t{oligo['Sequence*']}\")\n",
+    "for item in sequences_to_order.values():\n",
+    "    if item[\"kind\"] != \"promoter\":\n",
+    "        print(f\"{item['oligo_id']}\\t{_format_seq(item['optimized_seq'])}\")"
    ]
   },
   {
@@ -874,7 +914,88 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plasmids"
+    "import pickle\n",
+    "\n",
+    "data = {\n",
+    "    \"oligos\": oligos,\n",
+    "    \"plasmids\": plasmids,\n",
+    "    \"plasmid_maps\": plasmid_maps,\n",
+    "    \"strains\": strains,\n",
+    "    \"parts\": parts,\n",
+    "    \"sequences_to_order\": sequences_to_order,\n",
+    "    \"oligo_row\": oligo_row,\n",
+    "    \"plasmid_row\": plasmid_row,\n",
+    "    \"strain_row\": strain_row,\n",
+    "    \"part_row\": part_row,\n",
+    "}\n",
+    "with open(\"201013voigtsigmas.json\", \"wb\") as f:\n",
+    "    pickle.dump(data, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "\n",
+    "with open(\"201013voigtsigmas.json\", \"rb\") as f:\n",
+    "    data = pickle.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "oligos = data[\"oligos\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "workflow.insert_parts(part_sheet, parts, part_row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "api.google.insert_sheet_rows(plasmid_sheet, plasmid_row, plasmids)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "api.google.insert_sheet_rows(strain_sheet, strain_row, strains)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "api.google.insert_sheet_rows(oligo0_sheet, oligo_row, oligos)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "workflow.upload_plasmid_maps(drive_service, plasmid_maps, plasmid_folder)"
    ]
   },
   {
@@ -891,9 +1012,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "oligos_to_order"
-   ]
+   "source": []
   }
  ],
  "metadata": {
