[cloning,shenker/cloning] Hotfix for Voigt sigma parts.

--- a/paulssonlab/src/paulssonlab/shenker/cloning/201013 Voigt sigma factor orders.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/201013 Voigt sigma factor orders.ipynb
@@ -790,9 +790,9 @@
     "    part = {\n",
     "        \"Name*\": name,\n",
     "        \"Usage*\": usage,\n",
-    "        \"Upstream overhang*\": overhang1[0],\n",
-    "        \"Downstream overhang*\": overhang2[0],\n",
-    "        \"Sequence*\": _format_seq(part_seq),\n",
+    "        \"Upstream overhang*\": _format_seq(overhang1[0]),\n",
+    "        \"Downstream overhang*\": _format_seq(overhang2[0]),\n",
+    "        \"Sequence*\": _format_seq(overhang1[0] + part_seq + overhang2[0]),\n",
     "        \"Descrption\": description,\n",
     "        **base_part,\n",
     "    }\n",
@@ -938,36 +938,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pickle\n",
-    "\n",
-    "with open(\"201013voigtsigmas.json\", \"rb\") as f:\n",
-    "    data = pickle.load(f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "oligos = data[\"oligos\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "workflow.insert_parts(part_sheet, parts, part_row)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "api.google.insert_sheet_rows(plasmid_sheet, plasmid_row, plasmids)"
    ]
   },
@@ -1005,6 +975,74 @@
    "outputs": [],
    "source": [
     "plasmid_maps.keys()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Hotfix for parts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "\n",
+    "with open(\"201013voigtsigmas.json\", \"rb\") as f:\n",
+    "    data = pickle.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sequences_to_order = data[\"sequences_to_order\"]\n",
+    "oligos = data[\"oligos\"]\n",
+    "parts = data[\"parts\"]\n",
+    "part_row = data[\"part_row\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# had to convert int64 to Python int (JSON serialization issue; bug fixed in get_next_empty_row)\n",
+    "part_row = int(part_row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def _format_seq(seq):\n",
+    "    return str(sequence.get_seq(seq)).lower()\n",
+    "\n",
+    "\n",
+    "for part in parts:\n",
+    "    part[\"Upstream overhang*\"] = _format_seq(part[\"Upstream overhang*\"])\n",
+    "    part[\"Downstream overhang*\"] = _format_seq(part[\"Downstream overhang*\"])\n",
+    "    part[\"Sequence*\"] = (\n",
+    "        part[\"Upstream overhang*\"] + part[\"Sequence*\"] + part[\"Downstream overhang*\"]\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "workflow.insert_parts(part_sheet, parts, part_row)"
    ]
   },
   {
