[shenker/cloning] Typo in sigma factor order code that omitted description field from parts spreadsheet.

--- a/paulssonlab/src/paulssonlab/shenker/cloning/201013 Voigt sigma factor orders.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/201013 Voigt sigma factor orders.ipynb
@@ -793,7 +793,7 @@
     "        \"Upstream overhang*\": _format_seq(overhang1[0]),\n",
     "        \"Downstream overhang*\": _format_seq(overhang2[0]),\n",
     "        \"Sequence*\": _format_seq(overhang1[0] + part_seq + overhang2[0]),\n",
-    "        \"Descrption\": description,\n",
+    "        \"Description\": description,\n",
     "        **base_part,\n",
     "    }\n",
     "    parts.append(part)\n",
@@ -1044,13 +1044,6 @@
    "source": [
     "workflow.insert_parts(part_sheet, parts, part_row)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
